force-app/main/default/objects/LinkAccess__c/LinkAccess__c.object-meta.xml
<CustomObject>
    <description>Tracks access events for shortened links</description>
    <label>Link Access</label>
    <pluralLabel>Link Accesses</pluralLabel>
    <nameField>
        <label>Link Access Name</label>
        <type>AutoNumber</type>
        <displayFormat>LA-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>