force-app/main/default/objects/LinkAccess__c/fields/Access_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Access_DateTime__c</fullName>
    <label>Access DateTime</label>
    <type>DateTime</type>
</CustomField>