force-app/main/default/objects/LinkAccess__c/fields/ShortenedLink__c.field-meta.xml
<CustomField>
    <fullName>ShortenedLink__c</fullName>
    <label>Shortened Link</label>
    <referenceTo>ShortenedLink__c</referenceTo>
    <relationshipLabel>Link Accesses</relationshipLabel>
    <relationshipName>LinkAccesses</relationshipName>
    <type>MasterDetail</type>
</CustomField>